--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
+      "runtimeExecutable": "C:\\Program Files\\BraveSoftware\\Brave-Browser\\Application\\brave.exe",
       "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/"
     },
