--- a/angular.json
+++ b/angular.json
@@ -107,5 +107,19 @@
       }
     }
   },
+  "schematics": {
+    "@schematics/angular:component": {
+      "skipTests": true
+    },
+    "@schematics/angular:service": {
+      "skipTests": true
+    },
+    "@schematics/angular:guard": {
+      "skipTests": true
+    },
+    "@schematics/angular:directive": {
+      "skipTests": true
+    }
+  },
   "defaultProject": "pokemon-streaming"
 }
