--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ng-select/ng-select": "^8.1.1",
+    "firebase": "^9.6.10",
     "pokenode-ts": "^1.13.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
