--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pokemon-streaming": {
+    "nuzlocke-tracker": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/pokemon-streaming",
+            "outputPath": "dist/nuzlocke-tracker",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "pokemon-streaming:build:production"
+              "browserTarget": "nuzlocke-tracker:build:production"
             },
             "development": {
-              "browserTarget": "pokemon-streaming:build:development"
+              "browserTarget": "nuzlocke-tracker:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pokemon-streaming:build"
+            "browserTarget": "nuzlocke-tracker:build"
           }
         },
         "test": {
@@ -123,5 +123,5 @@
       "skipTests": true
     }
   },
-  "defaultProject": "pokemon-streaming"
+  "defaultProject": "nuzlocke-tracker"
 }
